--- a/src/App.css
+++ b/src/App.css
@@ -9,11 +9,12 @@
     box-shadow: 1px 2px 6px #fff;
     display: flex;
     height: 10vh;
+    justify-content: space-between;
 }
 
 .Options {
     display: flex;
-
+    padding: 0;
     li {
         display: flex;
         justify-content: center;
@@ -43,8 +44,17 @@
             font-size: large;
         }
     }
+}
 
-
+.Icons {
+    display: flex;
+    min-width: 230px;
+    padding: 0;
+    justify-content: center;
+    align-items: center;
+    li {
+        margin-left: 25px;
+    }
 }
 
 li {
